--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,57 @@
 absl-py==0.12.0
+astor==0.8.1
+atari-py==0.2.6
+cached-property==1.5.2
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 cloudpickle==1.6.0
+cycler==0.10.0
 Flask==1.1.2
 Flask-Cors==3.0.10
 future==0.18.2
+gast==0.2.2
+google-pasta==0.2.0
 grpcio==1.36.1
 gym==0.18.0
+h5py==3.2.1
 idna==2.10
 importlib-metadata==3.10.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
 Markdown==3.3.4
 MarkupSafe==1.1.1
+matplotlib==3.4.1
 numpy==1.20.2
+opencv-python==4.5.1.48
+opt-einsum==3.3.0
+pandas==1.2.3
 parl==1.4.3
 Pillow==7.2.0
 protobuf==3.15.6
 psutil==5.8.0
 pyglet==1.5.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
 pyzmq==18.1.1
 requests==2.25.1
--e git+https://github.com/botclimber/ReverseX.git@533dd48a876cdb802c24c02fbed3720b91fcfedc#egg=RX_env&subdirectory=RX_env
+-e git+https://github.com/botclimber/ReverseX.git@c5342fa4bbf4a999fe637a7dec845a4a1a7d6562#egg=RX_env&subdirectory=RX_env
 scipy==1.6.2
 six==1.15.0
+stable-baselines==2.10.1
 tb-nightly==1.15.0a20190801
+tensorboard==1.15.0
 tensorboardX==1.8
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
 termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 Werkzeug==1.0.1
+wrapt==1.12.1
 zipp==3.4.1
