--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==0.12.0
 astor==0.8.1
 atari-py==0.2.6
 cached-property==1.5.2
+cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -11,6 +12,8 @@ Flask==1.1.2
 Flask-Cors==3.0.10
 future==0.18.2
 gast==0.2.2
+google-auth==1.28.1
+google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.36.1
 gym==0.18.0
@@ -27,6 +30,7 @@ Markdown==3.3.4
 MarkupSafe==1.1.1
 matplotlib==3.4.1
 numpy==1.20.2
+oauthlib==3.1.0
 opencv-python==4.5.1.48
 opt-einsum==3.3.0
 pandas==1.2.3
@@ -34,19 +38,22 @@ parl==1.4.3
 Pillow==7.2.0
 protobuf==3.15.6
 psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyglet==1.5.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 pyzmq==18.1.1
 requests==2.25.1
--e git+https://github.com/botclimber/ReverseX.git@c5342fa4bbf4a999fe637a7dec845a4a1a7d6562#egg=RX_env&subdirectory=RX_env
+requests-oauthlib==1.3.0
+rsa==4.7.2
+-e git+https://github.com/botclimber/ReverseX.git@118b50e2871f2aead7d9c51f89ba2364f7dc7811#egg=RX_env&subdirectory=RX_env
 scipy==1.6.2
 six==1.15.0
 stable-baselines==2.10.1
-tb-nightly==1.15.0a20190801
-tensorboard==1.15.0
-tensorboardX==1.8
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
 tensorflow==1.15.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
